--- a/css/ProgramUpdate.css
+++ b/css/ProgramUpdate.css
@@ -1,16 +1,20 @@
+@media (max-width:414px) {
+  .staff {
+    padding-top: 40px;
+  }
+}
+
+
 .Heading {
   text-align: center;
 }
 
-.ProgramUpdates {
-  color:#45403c;
-  font-size: 18px;
 
-
+.staff-center {
+  text-align: center;
 
 }
 
-.ProgramUpdates > ul > li {
-  list-style:disc;
-  margin-top: 18px;
+.staff-details {
+  font-size: 18px;
 }
